--- a/app/MainModule/Presenters/templates/PigLatin/default.latte
+++ b/app/MainModule/Presenters/templates/PigLatin/default.latte
@@ -1,3 +1,5 @@
 {block content}
-<h1>Pig Latin Translator</h1>
+    <h1>Pig Latin Translator</h1>
+    {control inputForm}
+    {$translatedText}
 {/block}
