--- a/app/MainModule/Presenters/templates/PigLatin/default.latte
+++ b/app/MainModule/Presenters/templates/PigLatin/default.latte
@@ -1,5 +1,5 @@
 {block content}
     <h1>Pig Latin Translator</h1>
     {control inputForm}
-    {$translatedText}
+    <p>{$translatedText}</p>
 {/block}
